--- a/p8106_final_project.Rmd
+++ b/p8106_final_project.Rmd
@@ -71,8 +71,9 @@ df = read.csv("./cardio_train.csv", header = TRUE, stringsAsFactors = FALSE, sep
                             ),
          cardio = as.factor(cardio)
          ) %>%
-  mutate(cholesterol = as.factor(cholesterol),
-         gluc = as.factor(gluc)
+  mutate(cholesterol = factor(cholesterol, levels = c("normal", "above normal", "well above normal")),
+         gluc = factor(gluc, levels = c("normal", "above normal", "well above normal")),
+         cardio = factor(cardio, levels = c("nondiseased", "diseased"))
          ) %>%
   dplyr::select(age_day, height, weight, ap_hi, ap_lo, everything())
 
@@ -226,6 +227,19 @@ confusionMatrix(data = as.factor(mars_test_pred),
                 )
 
 auc(test_outcome_y, mars_test_pred_prob)
+coef(mars_model$finalModel)
+
+p1  = pdp::partial(mars_model, pred.var = c("age_day"), grid.resolution = 10) %>%
+  autoplot()
+p1
+
+p2  = pdp::partial(mars_model, pred.var = c("ap_hi"), grid.resolution = 10) %>%
+  autoplot()
+p2
+
+p3 = pdp::partial(mars_model, pred.var = c("age_day", "ap_hi"), grid.resolution = 10) %>%
+  pdp::plotPartial(levelplot = FALSE, zlab = "yhat", drape = TRUE, screen = list(z = 20, x = -60))
+p3
 ```
 
 
