--- a/p8106_final_project.Rmd
+++ b/p8106_final_project.Rmd
@@ -351,10 +351,14 @@ confusionMatrix(data = as.factor(ct_test_pred),
 ```{r}
 # Train caret random forest model
 set.seed(2022)
+#control
+control_rf = trainControl(method = "cv",
+                          classProbs = T,
+                          summaryFunction = twoClassSummary)
 # Grid of tuning parameters
 rf_grid = expand.grid(mtry = 1:12, 
                       splitrule = "gini",
-                      min.node.size = seq(from = 2, to = 10, by = 2)
+                      min.node.size = seq(from = 2, to = 15, by = 2)
                       )
 
 # Find best-fitting model after model fitting to optimize computational efficiency
@@ -363,9 +367,13 @@ rf_fit = train(cardio ~ .,
               method = "ranger",
               tuneGrid = rf_grid,
               metric = "ROC",
-              trControl = control_class)
+              trControl = control_rf)
 
 summary(rf_fit)
+
+#tuning parameter
+ggplot(rf_fit, highlight = T)
+rf_fit$bestTune
 
 rf_pred = predict(rf_fit, newdata = test_data, type = "prob")[,2]
 #rf_pred
